# audit-service

./: .gitignore  .pre-commit-config.yaml  .secexclude  .secrets.baseline  Dockerfile  Jenkinsfile  LICENSE  NOTICE  README.md  cfg_help.py  dev-audit.yaml  dockerrun.bash  pyproject.toml  run.py
.github/: labeler.yml
.github/workflows/: ci.yaml  docs.yaml  image_build_push.yaml  integration_tests.yaml  labeler.yml
deployment/wsgi/: wsgi.py
docs/: load_test.py  openapi.yaml
docs/explanation/: async_post.md  creating_audit_logs.md  query_page_size.md
docs/how-to/: add_log_category.md  deployment.md  local_installation.md
docs/reference/: architecture.md
docs/tutorials/: api_examples.md  quick_start.md
migrations/: env.py
migrations/versions/: 21a74a628839_add_passport_to_presigned_url.py  42692e47f254_add_additional_data_to_presigned_url_.py  43a6446e2d8d_add_additional_data_to_auditlog.py  45aae42015e8_add_ip_column_to_login_table.py  5198001b2ab8_add_ip_to_login_table.py  7a838ea48eea_add_auto_increment_primary_key_to_.py  7a838ea48eea_add_pk_to_login_and_presigned_url.py  91d4d845c851_add_ip_to_login_table.py  d5b18185c458_create_presigned_url_and_login_tables.py  d5b18185c458_create_presigned_url_table.py  fd0510a0a9aa_optional_presigned_url_resource_paths.py
src/audit/: __init__.py  app.py  asgi.py  config-default.yaml  config.py  db.py  models.py  pull_from_queue.py
src/audit/auth/: __init__.py
src/audit/routes/: maintain.py  query.py  system.py
src/audit/utils/: route_utils.py  validate_utils.py
tests/: conftest.py  test-audit-service-config.yaml  test_maintain.py  test_query.py  test_queue.py  test_system.py
tests/migrations/: test_21a74a628839_add_passport_to_presigned_url.py
workflows/: ci.yaml
