[tool.poetry]
name = "audit"
version = "1.1.0"
description = "Gen3 Access Request Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/audit-service"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.2"
authutils = "^6.2.1"
boto3 = "^1.14"
cdislogging = "^1.0.0"
fastapi = "^0.65.2"
gen3authz = "^1.0.0"
gen3config = "^1.0.0"
gino = {version = "^1.0.1", extras = ["starlette"]}
gunicorn = "^20.0.4"
importlib-metadata = {version = "^1.7.0", python = "<3.8"}
httpx = "^0.23.0"
psycopg2-binary = "^2.8.5"
uvicorn = "^0.18.3"
# markupsafe is a jinja dependency. Jinja is used by gen3config.
# The current version of jinja imports the ‘soft_unicode’ method from markupsafe.
# soft_unicode has been deprecated from markupsafe versions > 2.0.1.
# Pin to <=2.0.1 for compatibility with jinja.
markupsafe = "<=2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.8"
requests = "^2.24.0"

[tool.poetry.plugins."audit.modules"]
"system" = "audit.routes.system"
"maintain" = "audit.routes.maintain"
"query" = "audit.routes.query"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
