[tool.poetry]
name = "audit"
version = "2.0.0"
description = "Gen3 Access Request Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/audit-service"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9.2, <4"
alembic = "^1.4.2"
authutils = ">=6.2.7, <7"
boto3 = "<1.35"
cdislogging = "<2"
fastapi = "<1"
gen3authz = "<3"
gen3config = "<2"
gunicorn = "^23.0.0"

importlib-metadata = {version = "^1.7.0", python = "<3.8"}
httpx = "^0.23.0"
uvicorn = "^0.18.3"
# markupsafe is a jinja dependency. Jinja is used by gen3config.
# The current version of jinja imports the `soft_unicode` method from markupsafe.
# soft_unicode has been deprecated from markupsafe versions > 2.0.1.
# Pin to <=2.0.1 for compatibility with jinja.
markupsafe = "<=2.0.1"
# urllib3 is a sub-dependency of requests and botocore (dep of boto3). For some reason poetry was not
# able to resolve deps until we pinned it. TODO remove later
urllib3 = "^1.26"
jinja2 = "^3.1.6"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
setuptools = "^78.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^2.8"
requests = "^2.32.0"

[tool.poetry.plugins."audit.modules"]
"system" = "audit.routes.system"
"maintain" = "audit.routes.maintain"
"query" = "audit.routes.query"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
